vcluster_versioned_docs/version-0.32.0/_fragments/deploy/standalone-flags.mdx
## Available flags to use in the install script

There are several flags available that can be added to the script.

| Flag | Description |
|------|-------------|
| `--vcluster-name` | Name of the vCluster instance |
| `--vcluster-version` | Specific vCluster version to install |
| `--config` | Path to the vcluster.yaml configuration file |
| `--skip-download` | Skip downloading vCluster binary (use existing) |
| `--skip-wait` | Exit without waiting for vCluster to be ready |
| `--extra-env` | Additional environment variables for vCluster |
| `--platform-access-key` | Access key for vCluster Platform integration |
| `--platform-host` | vCluster Platform host URL |
| `--platform-insecure` | Skip TLS verification for Platform connection |
| `--platform-instance-name` | Instance name in vCluster Platform |
| `--platform-project` | Project name in vCluster Platform |